--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,19 +31,31 @@ h1 {
 
 #put-in-tray {
 	right: 10px;
-	top: 20px;
-	width: 25px;
-	height: 20px;
+	top: 5px;
+	width: 13px;
+	height: 13px;
 	position: absolute;
+	-webkit-app-region: no-drag;
+	border-radius: 50%;
+	background: #CCC;
+}
+
+#put-in-tray > img {
+	display: none;
 }
 
 #put-in-tray:hover {
 	box-shadow: none;
 }
 
+#put-in-tray:hover > img {
+	display: block;
+}
+
 #put-in-tray img {
-	width: 10px;
-	margin: 0 0 -1px -1px;
+	width: 7px;
+	margin: 0 0 -1.5px -3px;
+	opacity: 0.7;
 }
 
 form {
