--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,15 +43,28 @@ h1 {
 #loading {
 	width: 20px;
 	top: 9.5px;
-	right: 40px;
+	right: 60px;
 	position: absolute;
 	margin-left: 20px;
 	display: none;
 }
 
-#put-in-tray {
-	right: 12px;
+.top-buttons {
+	display: block;
+	width: 35px;
+	height: 15px;
+	position: absolute;
 	top: 13px;
+	right: 12px;
+}
+
+.top-buttons:hover button img {
+	display: block !important;
+}
+
+#put-in-tray, #reload-page {
+	right: 0;
+	top: 0;
 	width: 13px;
 	height: 13px;
 	position: absolute;
@@ -60,21 +73,32 @@ h1 {
 	background: #CCC;
 }
 
-#put-in-tray > img {
+#put-in-tray > img, #reload-page > img {
 	display: none;
 }
 
-#put-in-tray:hover {
-	box-shadow: none;
-}
-
-#put-in-tray:hover > img {
+#put-in-tray:hover > img, #reload-page:hover > img {
 	display: block;
 }
 
-#put-in-tray img {
+#put-in-tray:hover, #reload-page:hover {
+	box-shadow: none;
+}
+
+#put-in-tray img{
 	width: 7px;
 	margin: 0 0 -1.5px -3px;
+	opacity: 0.7;
+}
+
+#reload-page {
+	right: 21px;
+	background: #999;
+}
+
+#reload-page img {
+	width: 11px;
+	margin: -1px 0 0 -5px;
 	opacity: 0.7;
 }
 
@@ -165,6 +189,7 @@ button:hover {
 video, audio {
 	margin-top: 0px;
 	width: 100%;
+	animation: fadein 5s;
 }
 
 audio {
